[gd_scene load_steps=5 format=3 uid="uid://bhlw8cr8vn738"]

[ext_resource type="Script" uid="uid://j41klfg5giyx" path="res://Scripts/Battle/battle_menu.gd" id="1_73636"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mybmv"]
bg_color = Color(0.1254902, 0.1254902, 0.5019608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aoll7"]
bg_color = Color(0.1254902, 0.1254902, 0.5019608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6k22c"]
bg_color = Color(0.1254902, 0.1254902, 0.5019608, 1)

[node name="BattleMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_73636")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 150.0
offset_bottom = 77.0

[node name="Button (Attack)" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mybmv")
text = "Attack"

[node name="Button (Item)" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_aoll7")
text = "Items"

[node name="Button (Run)" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6k22c")
text = "Run"

[connection signal="pressed" from="VBoxContainer/Button (Attack)" to="." method="_on_button_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/Button (Item)" to="." method="_on_button_item_pressed"]
[connection signal="pressed" from="VBoxContainer/Button (Run)" to="." method="_on_button_run_pressed"]
